implemented frontend screens account, transaction.
