# Presentation/WebClient/src/app/api/generation/models/get-account-by-id-response.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface GetAccountByIdResponse {
+  balance?: number;
   dateCreated?: string;
   id?: string;
   name?: string;
