# Presentation/WebClient/src/app/api/generation/models/search-account-response.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface SearchAccountResponse {
+  balance?: number;
   id?: string;
   name?: string;
 }
